When inserting a selected <option> in a <select> element, its selected state should remain https://bugs.webkit.org/show_bug.cgi?id=235237

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests that are now passing.

* web-platform-tests/html/semantics/forms/the-select-element/inserted-or-removed-expected.txt:
* web-platform-tests/html/semantics/forms/the-select-element/select-validity-expected.txt:

Source/WebCore:

When inserting a selected <option> in a <select> element, its selected state should remain and other selected
options should be de-selected.

This is as per the specification [1] that says:
"""
If the multiple attribute is absent, whenever an option element in the select element's list of options has
its selectedness set to true, and whenever an option element with its selectedness set to true is added to
the select element's list of options, the user agent must set the selectedness of all the other option
elements in its list of options to false.
"""

Firefox and Chrome correctly implement this.

WebKit was trying to implement this logic from inside HTMLOptionElement::insertedIntoAncestor(). However,
there were several issues with that:
1. It was checking m_isSelected after calling updateValidity(). updateValidity() would call recalcListItems(),
   which could update m_isSelected. This part could have been addressed by saving m_isSelected before
   calling updateValidity() but would not have addressed the following issues.
2. In the case where an <optgroup> containing several <option> elements is inserted into a <select>,
   insertedIntoAncestor() gets called from each options being inserted. When calling insertedIntoAncestor()
   from the first <option> and if this <option> is selected, it would deselect all following <option> elements
   even though insertedIntoAncestor() has not yet been called for them. As a result, we would end up selecting
   the first inserted <option> that had the selected state, instead of the last one.
3. When more than one <option> is inserted at once, the current implementation would be really inefficient as
   every <option> would dirty and recalc the item list from insertedIntoAncestor().

To address these issues, I got rid of HTMLOptionElement::insertedIntoAncestor(). Instead we now deal with
<option> insertion from inside HTMLSelectElement::childrenChanged() and HTMLOptGroupElement::childrenChanged().
Using the parent element's childrenChanged() is useful because it only gets called once when several <option>
elements are inserted at once. I added logic to those childrenChanged() functions to keep track of the last
selected <option> element being inserted. Then, after we recalc the item list (which may change <option>s'
selected state, I make sure to this <option> is selected. This is similar to the logic that was previously
in HTMLOptionElement::insertedIntoAncestor().

[1] https://html.spec.whatwg.org/multipage/form-elements.html#the-select-element

No new tests, rebaselined existing tests.

* dom/CharacterData.cpp:
(WebCore::makeChildChange):
* dom/ContainerNode.cpp:
(WebCore::ContainerNode::removeAllChildrenWithScriptAssertion):
(WebCore::makeChildChangeForRemoval):
(WebCore::makeChildChangeForInsertion):
(WebCore::ContainerNode::childrenChanged):
(WebCore::affectsElements): Deleted.
* dom/ContainerNode.h:
(WebCore::ContainerNode::ChildChange::isInsertion const):
(WebCore::ContainerNode::ChildChange::affectsElements const):
- Add 'siblingChanged' member to ChildChange in addition to the previous / next siblings.
  This is useful for HTMLOptGroupElement and HTMLSelectElement where we want to know
  if a newly inserted child is an HTMLOptionElement (and if it is selected).
- Move affectsElements() to the header so that it can be reused by HTMLOptGroupElement
  and HTMLOptionElement.

* html/HTMLOptGroupElement.cpp:
(WebCore::HTMLOptGroupElement::childrenChanged):
* html/HTMLOptGroupElement.h:
* html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::insertedIntoAncestor): Deleted.
* html/HTMLOptionElement.h:
* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::optionToSelectFromChildChangeScope): Added.
(WebCore::HTMLSelectElement::childrenChanged):

LayoutTests:

Rebaseline WPT test that is now passing.

* platform/ios-wk2/imported/w3c/web-platform-tests/html/semantics/forms/the-select-element/select-validity-expected.txt:



Canonical link: https://commits.webkit.org/246158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288174 268f45cc-cd09-0410-ab3c-d52691b4dbfc